--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Roboto:wght@300&family=Work+Sans:ital,wght@0,200;0,300;0,400;0,500;0,700;0,800;1,600&display=swap"
     rel="stylesheet" />
   <!-- link the css -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="./style.css" type="text/css"/>
   <title>Frontend Mentor | NFT preview card component</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -30,8 +30,8 @@
 <body>
   <div class="container">
     <div class="eth-container">
-      <img src="/images/image-equilibrium.jpg" alt="Equilibrium image" width="280px"/> 
-     <a href="#" class="ethirium"><img src="/images/icon-view.svg" alt="view icon" class="view" width="50px"></a> 
+      <img src="./images/image-equilibrium.jpg" alt="Equilibrium image" width="280px"/> 
+     <a href="#" class="ethirium"><img src="./images/icon-view.svg" alt="view icon" class="view" width="50px"></a> 
     </div>
     <div class="eqrm">
       <a href="#" class="equilibrium"> Equilibrium #3429 </a>
@@ -40,15 +40,15 @@
     <div class="flex">
       <div class="eth">
         <p class="eth">0.041 ETH</p>
-        <img class="eth_icon" src="/images/icon-ethereum.svg" alt="ethirieum icon">
+        <img class="eth_icon" src="./images/icon-ethereum.svg" alt="ethirieum icon">
       </div>
       <div class="days">
-        <img class="clock-icon" src="/images/icon-clock.svg" alt="clock icon">
+        <img class="clock-icon" src="./images/icon-clock.svg" alt="clock icon">
         <p class="days"> 3 days left</p>
       </div>
     </div>
     <div class="author">
-      <img class="avatar" src="/images/image-avatar.png" alt="author avatar" width="40px">
+      <img class="avatar" src="./images/image-avatar.png" alt="author avatar" width="40px">
       <p class="author"> Creation of <a href="#" class="jules">Jules Wyvern </a> </p>
 
     </div>
