--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 </head>
 
 <body>
-  <div class="container">
+  <main class="container">
     <div class="eth-container">
       <img src="./images/image-equilibrium.jpg" alt="Equilibrium image" width="280px"/> 
      <a href="#" class="ethirium"><img src="./images/icon-view.svg" alt="view icon" class="view" width="50px"></a> 
     </div>
     <div class="eqrm">
-      <a href="#" class="equilibrium"> Equilibrium #3429 </a>
+      <h1 href="#" class="equilibrium"> Equilibrium #3429 </h1>
     </div>
     <p class="moto">Our Equilibrium collection promotes balance and calm.</p>
     <div class="flex">
@@ -52,12 +52,12 @@
       <p class="author"> Creation of <a href="#" class="jules">Jules Wyvern </a> </p>
 
     </div>
-  </div>
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
     Challenge by <a class="front-end" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
       Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/Zahia93" class="zahia"> Zahia Hamaz </a>.
-  </div>
+  </footer>
 </body>
 
 </html>
