--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main class="container">
     <div class="eth-container">
       <img src="./images/image-equilibrium.jpg" alt="Equilibrium image" width="280px"/> 
-     <a href="#" class="ethirium"><img src="./images/icon-view.svg" alt="view icon" class="view" width="50px"></a> 
+     <a href="#" class="ethirium"><img src="./images/icon-view.svg" alt=" " class="view" width="50px" aria-hidden="true"></a> 
     </div>
     <div class="eqrm">
       <h1 href="#" class="equilibrium"> Equilibrium #3429 </h1>
@@ -40,15 +40,15 @@
     <div class="flex">
       <div class="eth">
         <p class="eth">0.041 ETH</p>
-        <img class="eth_icon" src="./images/icon-ethereum.svg" alt="ethirieum icon">
+        <img class="eth_icon" src="./images/icon-ethereum.svg" alt=" " aria-hidden="true">
       </div>
       <div class="days">
-        <img class="clock-icon" src="./images/icon-clock.svg" alt="clock icon">
+        <img class="clock-icon" src="./images/icon-clock.svg" alt="" aria-hidden="true">
         <p class="days"> 3 days left</p>
       </div>
     </div>
     <div class="author">
-      <img class="avatar" src="./images/image-avatar.png" alt="author avatar" width="40px">
+      <img class="avatar" src="./images/image-avatar.png" alt="Headshot of Jules Wyvern" width="40px">
       <p class="author"> Creation of <a href="#" class="jules">Jules Wyvern </a> </p>
 
     </div>
